# ragtime-package

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
deploy/: deploy.py
doc/: root.md
src/ragtime/: __init__.py  api.py  base.py  config.py  config.toml  expe.py  generators.py  pipeline.py  prompters.py
src/ragtime/base/: data_type.py  exporter.py  llm.py  llm_class.py  prompter.py  retriever.py  text_generator.py  text_generators.py
src/ragtime/base_folder/: .gitignore  LICENSE  classes.py  example_keys.py  main.py
src/ragtime/base_folder/expe/01. Questions/: json_helper.xlsx
src/ragtime/base_folder/res/html_templates/: basic_template.jinja  basic_template_without_chunks_img.jinja
src/ragtime/base_folder/res/spreadsheet_templates/: MCQ.xlsx  basic_template.xlsx  first_questions.xlsx  spreadsheet_rich_template.xlsx  test_facts.xlsx  with_retriever.xlsx  without_retriever.xlsx
src/ragtime/base_folder/res/spreadsheet_templates/old/: basic_template_old.xlsx
src/ragtime/exporters/: __init__.py  html.py  json.py  spreadsheet.py
src/ragtime/generator/prompters/: simple_eval_french.py  simple_fact_french.py  two_fact_eval_french.py
src/ragtime/generator/text_generators/: answer_generator.py
src/ragtime/generators/: __init__.py  answer_generator.py  eval_generator.py  fact_generator.py  question_answer_generator.py  question_generator.py  text_generator.py
src/ragtime/llms/: __init__.py  llm.py
src/ragtime/prompters/: __init__.py  answer_prompters.py  answer_with_retriever_fr.py  eval_prompters.py  fact_prompters.py  prompter.py  question_answer_prompter.py  question_prompters.py  simple_facts_fr.py
src/ragtime/prompters/answer/: base.py  base_fr.py  with_retriever.py
src/ragtime/prompters/eval/: base_fr.py  fr.py
src/ragtime/prompters/fact/: base_fr.py
src/ragtime/prompters/question/: base_fr.py
src/ragtime/retrievers/: __init__.py  indexer.py  retriever.py
src/ragtime/text_generators/: __init__.py  answer_generator.py  eval_generator.py  fact_generator.py  question_generator.py
tests/: full_test.py  main.py  run_tests.py  single_test.py  test_quest.json
tests/test_async/: README.md  main.py
