[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ragtime"
version = "0.0.39"

authors = [
  { name="Gilles Moyse", email="gilles@recital.ai" },
]
maintainers = [
  { name="reciTAL", email="ragtime@recital.ai" },
]
description = "Ragtime 🎹 is an LLMOps framework to automatically evaluate Retrieval Augmented Generation (RAG) systems and compare different RAGs / LLMs"
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
readme = "README.md"
license = {file = "LICENSE"}
keywords = ["RAG", "LLM", "Evaluation"]
dependencies = ['requests', 'retry', 'pathlib', 'openpyxl', 'langdetect',
'pydantic', 'jinja2', 'tabulate', 'unidecode', 'litellm', 'setenv', 'py_setenv', 'lazy_import',
'asyncio', 'llama_index']

[project.urls]
Homepage = "https://github.com/recitalAI/ragtime-package"
Issues = "https://github.com/recitalAI/ragtime-package/issues"